--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "become-a-facilitator",
+  "homepage": "https://ishayasolo.github.io/become-a-facilitator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,10 +12,11 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
